--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Ejemplo Bootstrap - Coders 6 al 9</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    
+
+  <div class="container my-4">
+    <div class="row">
+      <!-- Contenido principal -->
+      <main class="col-lg-9">
+        <article>
+          <h1 class="mb-4">Título del Artículo</h1>
+
+          <!-- Coder 8: figure + figcaption -->
+          <figure class="mb-4">
+            <img src="https://via.placeholder.com/800x400" class="img-fluid rounded" alt="Imagen relevante">
+            <figcaption class="mt-2 text-muted">Descripción de la imagen relacionada al artículo.</figcaption>
+          </figure>
+
+          <!-- Coder 9: video con poster y fallback -->
+          <div class="mb-4">
+            <video class="w-100" controls poster="https://via.placeholder.com/640x360?text=Video+Poster">
+              <source src="video.mp4" type="video/mp4">
+              <source src="video.ogg" type="video/ogg">
+              Tu navegador no soporta el video. Puedes descargarlo <a href="video.mp4">aquí</a>.
+            </video>
+          </div>
+        </article>
+      </main>
+
+      <!-- Coder 7: aside (oculto en móviles) -->
+      <aside class="col-lg-3 d-none d-lg-block">
+        <h5>Enlaces relacionados</h5>
+        <ul class="list-unstyled">
+          <li><a href="#">Artículo relacionado 1</a></li>
+          <li><a href="#">Artículo relacionado 2</a></li>
+          <li><a href="#">Widget o recurso útil</a></li>
+        </ul>
+      </aside>
+    </div>
+  </div>
+
+  <!-- Coder 6: footer con address -->
+  <footer class="bg-dark text-white text-center py-4 mt-5">
+    <div class="container">
+      <p class="mb-1">&copy; 2025 Mi Sitio Web</p>
+      <p class="mb-2">
+        <a href="#" class="text-light text-decoration-none mx-2">Facebook</a>
+        <a href="#" class="text-light text-decoration-none mx-2">Twitter</a>
+        <a href="#" class="text-light text-decoration-none mx-2">Instagram</a>
+      </p>
+      <address class="mb-0">
+        Contacto: <a href="mailto:info@example.com" class="text-light text-decoration-none">info@example.com</a><br>
+        Dirección: Calle Ficticia #123, Ciudad, País
+      </address>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
