feat: agregar video, imagenes y footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
           <figure class="mb-4">
             <img src="https://picsum.photos/800/400" class="img-fluid rounded" alt="Imagen aleatoria">
-            <figcaption class="mt-2 text-muted">Imagen aleatoria usando Picsum Photos</figcaption>
+            <figcaption class="mt-2 text-muted">Imagen aleatoria</figcaption>
           </figure>
 
           <div class="mb-4">
